@@ -2,9 +2,17 @@
 
 plugins {
     id 'java'
-    id 'application'
+
+    // not required with the beryx runtime plugin
+    //id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.13'
-    id("org.beryx.jlink") version "3.0.1"
+
+    // if modular:
+    //id 'org.beryx.jlink' version '3.0.1'
+
+    // non modular:
+    //https://badass-runtime-plugin.beryx.org/releases/latest/
+    id 'org.beryx.runtime' version '1.13.1'
 }
 
 ext {
@@ -41,7 +49,11 @@ dependencies {
 
 }
 
-
+// beryx runtime plugin
+runtime {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    //modules = ['java.naming', 'java.xml']
+}
 
 def main_class_name = 'klik.Klik_application'
 
@@ -55,7 +67,7 @@ application {
     //applicationDefaultJvmArgs = ["-Xms1G"]
 
     // if you have a lot of RAM say 64GB or more
-    applicationDefaultJvmArgs = ["-Xms50G","-Xmx50G","-XX:+UseZGC","-XX:+ZGenerational","-XX:+FlightRecorder"]
+    applicationDefaultJvmArgs = ["-Xms50G","-Xmx50G","-XX:+UseZGC"]//"-Xlog:class+init=info:file=trace.log"]
 
 }
 
@@ -65,13 +77,13 @@ javafx {
 }
 
 
-jar {
-    manifest {
-        attributes(
-                'Main-Class': main_class_name
-        )
-    }
-}
+//jar {
+//    manifest {
+//        attributes(
+//                'Main-Class': main_class_name
+//        )
+//    }
+//}
 
 /*
 graalvmNative {
